[package]
name = "expose-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
expose-common = { path = "../expose-common" }
dashmap = "5"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = { version = "0.14", features = ["client", "http1", "tcp", "server"] }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url = "2"
toml = "0.8"
socket2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"
mockito = "1"
tempfile = "3"
criterion = "0.5"

[features]
default = ["rustls-tls"]
rustls-tls = ["tokio-tungstenite/rustls-tls-webpki-roots"]
native-tls = ["tokio-tungstenite/native-tls"]
